--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Health & Fitness | Template </title>
+    <title> Adam Morsel | Fitness </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -96,9 +96,9 @@
                         <div class="row">
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInLeft" data-delay="0.1s">with patrick potter</span>
-                                    <h1 data-animation="fadeInLeft" data-delay="0.4s">Build Perfect body Shape for good and Healthy life.</h1>
-                                    <a href="from.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">became a member</a>
+                                    <span data-animation="fadeInLeft" data-delay="0.1s">Adam Morsel</span>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.4s">Build Insane Strength and Aesthetics </h1>
+                                    <a href="from.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Learn More</a>
                                 </div>
                             </div>
                         </div>
