--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <!-- Video icon -->
             <div class="video-icon">
-                <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=up68UAfH0d0"><i class="fas fa-play"></i></a>
+                <a class="popup-video btn-icon" href="https://www.youtube.com/shorts/swixtskekHg"><i class="fas fa-play"></i></a>
             </div>
         </div>
         <!-- slider Area End-->
