--- a/index.html
+++ b/index.html
@@ -96,8 +96,22 @@
                         <div class="row">
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInLeft" data-delay="0.1s">Adam Morsel</span>
-                                    <h1 data-animation="fadeInLeft" data-delay="0.4s">Build Insane Strength and Aesthetics </h1>
+                                    <span data-animation="fadeInLeft" data-delay="0.1s">With Adam Morsel</span>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.4s">Build Insane Strength</h1>
+                                    <a href="from.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>          
+                </div>
+                                <!-- Single Slider -->
+                <div class="single-slider slider-height d-flex align-items-center">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
+                                <div class="hero__caption">
+                                    <span data-animation="fadeInLeft" data-delay="0.1s">With Adam Morsel</span>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.4s">Unlock New SKills</h1>
                                     <a href="from.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Learn More</a>
                                 </div>
                             </div>
@@ -110,9 +124,9 @@
                         <div class="row">
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInLeft" data-delay="0.1s">with patrick potter</span>
-                                    <h1 data-animation="fadeInLeft" data-delay="0.4s">Build Perfect body Shape for good and Healthy life.</h1>
-                                    <a href="from.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">became a member</a>
+                                    <span data-animation="fadeInLeft" data-delay="0.1s">With Adam Morsel</span>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.4s">Level Up</h1>
+                                    <a href="from.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Purchase A Plan</a>
                                 </div>
                             </div>
                         </div>
@@ -139,12 +153,12 @@
                         <div class="about-caption">
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle3 mb-35">
-                                <span>ABOUT oUR GYM</span>
-                                <h2>Safe Body building proper Solutions That Saves our Valuable Time!</h2>
+                                <span>Adam Morsel</span>
+                                <h2>Self Taught Calistenics Athlete with over 10 years training experience</h2>
                             </div>
-                            <p class="pera-top">Brook presents your services with flexible, convenient and cdpose layouts. You can select your favorite layouts & elements for cular ts with unlimited ustomization possibilities. Pixel-perfect replication of the designers is intended.</p>
-                            <p class="mb-65 pera-bottom">Brook presents your services with flexible, convefnient and chient anipurpose layouts. You can select your favorite layouts.</p>
-                            <a href="from.html" class="btn">became a member</a>
+                            <p class="pera-top">My name is Adam Morsel, I am a self taught calisthenics athlete with over 6 years of training experience, having started from the age of 15, it was no easy task to find where to begin and how to progress. I spent countless hours researching and practicing, learning and adjusting to get to where I am now. </p>
+                            <p class="mb-65 pera-bottom">I have taken the guess work out of achieving the transformation you've always wanted, simplifying what needs to be done in a structured manner to follow to ensure optimal results.</p>
+                            <a href="from.html" class="btn">Sign Up Now</a>
                         </div>
                     </div>
                 </div>
@@ -159,8 +173,8 @@
                     <div class="row align-items-end justify-content-between">
                         <div class="col-lg-6 col-md-10 col-sm-10">
                             <div class="section-tittle section-tittle2">
-                                <span>oUR sERVICES FOR YOU</span>
-                                <h2>PUSH YOUR LIMITS FORWARD We Offer to you</h2>
+                                <span>Personal Training</span>
+                                <h2>Certified Personal trainer</h2>
                             </div>
                         </div>
                         <div class="col-xl-2 col-lg-2 col-md-3">
@@ -178,8 +192,8 @@
                                 <i class="flaticon-fitness"></i>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">QUALITY EQUIPMENT</a></h5>
-                                <p>The sea freight service has grown consider ably in recent years. We spend timetting to kn.</p>
+                                <h5><a href="services.html">Fitness Instructing Level 2</a></h5>
+                                <p>Adam think of some words for here</p>
                             </div>
                             <div class="img-cap">
                                 <a href="services.html" class="">Discover More About Us <i class="ti-arrow-right"></i></a>
@@ -192,8 +206,8 @@
                                 <i class="flaticon-healthcare-and-medical"></i>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">health caring</a></h5>
-                                <p>The sea freight service has grown consider ably in recent years. We spend timetting to kn.</p>
+                                <h5><a href="services.html">Nutrition Coaching Level 4</a></h5>
+                                <p>Adam think of some words for here</p>
                             </div>
                             <div class="img-cap">
                                 <a href="services.html" class="">Discover More About Us <i class="ti-arrow-right"></i></a>
@@ -206,8 +220,8 @@
                                 <i class="flaticon-clock"></i>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">gym strategies</a></h5>
-                                <p>The sea freight service has grown consider ably in recent years. We spend timetting to kn.</p>
+                                <h5><a href="services.html">Personal Training Level 3</a></h5>
+                                <p>Adam think of some words for here</p>
                             </div>
                             <div class="img-cap">
                                 <a href="services.html" class="">Discover More About Us <i class="ti-arrow-right"></i></a>
